testsuite/tests/properties/invalid_node_builder/null/test.lkt
from common import BaseExample, FooNode, Literal

@synthetic
class EmptyNode: FooNode {
}

class Example: BaseExample {
    fun f(): NodeBuilder[EmptyNode] = null[NodeBuilder[EmptyNode]]
}
